# task_processor

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp  sample_task.cpp  sample_task.hpp
src/queue/: CMakeLists.txt  queue.cpp  queue.hpp
src/queue/worker/: CMakeLists.txt  worker.cpp  worker.hpp
src/task/: CMakeLists.txt  task.cpp  task.hpp
src/test/: CMakeLists.txt
src/test/testqueue/: CMakeLists.txt  main.cpp  testqueue.cpp  testqueue.hpp
src/test/testtask/: CMakeLists.txt  concrete_task.cpp  concrete_task.hpp  mock-task.hpp  testtask.cpp  testtask.hpp
